2004-10-29  Bryce Harrington <bryce@bryceharrington.org>

	* layer-fns.cpp:  documenting
	* layer-selector.cpp:  documenting & fixing funky widget resizing
	* object-ui.cpp, dialogs/item-properties.cpp, sp-object.h,
	  sp-object.cpp, widgets/layer-selector.cpp: add ability to set
	  inkscape:label from "Item Properties", remove id setting from
	  "Item Properties", switch to using
	  SPObject::label()/SPObject?::defaultLabel() in UI where object
	  ID is currently used.  Documenting.  Switching from "label" to
	  "inkscape:label" where appropriate.  Adding
	  visible()/setVisible() functions and activating checkbox.
	
2004-10-29  Kees Cook  <kees@outflux.net>

	* src/dialogs/export.cpp: moved function-based static state variable
	  into the dialog state variables.  Closes bug #993447.
	* src/display/curve.cpp: fixed compile warning.
	* src/sp-namedview.cpp: wasn't ref counting correctly.  Closes #955020.

2004-10-29  Jon A. Cruz  <jon@joncruz.org>

	* src/sp-image.cpp, src/extension/internal/gdkpixbuf-input.cpp:
	  Refactoring filenames and file opening
	  Scales imported images if DPI is known and not 72 DPI. Fixes
	  #1029755

2004-10-29  MenTaLguY  <mental@rydia.net>

	* src/sp-object.h, src/sp-object.cpp: more inkscape:label stuff

	* src/widgets/layer-selector.cpp, src/verbs.cpp:
	  unselect objects when layer is manually switched

2004-10-28  Kees Cook  <kees@outflux.net>

	* src/document-undo.cpp, src/document.cpp, src/sp-namedview.cpp,
	  src/sp-text.cpp, src/dialogs/desktop-properties.cpp,
	  src/dialogs/export.cpp, src/extension/input.cpp, 
	  src/extension/output.cpp, src/extension/system.cpp:
	  Fixing calls to sp_document_set_undo_sensitive to correct allow for
	  nesting, as suggested by mental.  Found while tracking down bug
	  #1030436.

2004-10-28  MenTaLguY  <mental@rydia.net>

	* src/util/list.h: cleanups of list class.  I think, aside from
	  documentation and maybe fixes for g++ 3.4 (if required), this